--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <body>
     <header>
         <h1>KS Jayawardana</h1>
-        <p>Data Science Enthusiast | AI Researcher | Python Developer</p>
+        <p>Data Science Enthusiast | Data Analyst | Python Developer </p>
     </header>
     <nav>
         <a href="#about">About</a>
@@ -157,7 +157,7 @@
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: kaveejay09@gmail.com</p>
+        <p>Email: <a href = kaveejay09@gmail.com> </a></p>
         <p>GitHub: <a href="https://github.com/kaveetha-jayawardana" target="_blank">github.com/kaveetha-jayawardana</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/kaveetha-jayawardana-0315aa301?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BO09V8Hz%2FTzOH6tXkBacrCg%3D%3D">linkedin.com/in/kaveetha-jayawardana</a></p>
     </section>
